--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -105,6 +105,7 @@ input[type="email"] {
   line-height:2rem;
   font-size:1.16rem;
   text-align:center;
+  border-radius: 0;
 }
 
 input::placeholder {
