--- a/src/assets/css/join.css
+++ b/src/assets/css/join.css
@@ -73,6 +73,7 @@
 }
 
 .join_wrap .select_ruffy .ruffys {
+  position:relative;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -149,7 +150,7 @@
 
 /* 말풍선 래퍼는 relative 기준점 */
 .join_wrap .select_ruffy .ruffys .speech-bubble-wrapper {
-  position: relative;
+  position: absoulte;
   width: 100%;
   margin-top: 1rem;
 }
