--- a/src/assets/css/join.css
+++ b/src/assets/css/join.css
@@ -138,7 +138,7 @@
 
 .join_wrap .select_ruffy .ruffys .speech-bubble {
   width: 100%;
-  min-height:15rem;
+  height:30%;
   position: relative;
   padding: 1.5rem 1.8rem;
   background: #fff;
