--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -66,7 +66,7 @@ h1 {
   font-family: 'Paperlogy-8ExtraBold';
   font-size:3.8rem;
   line-height:4.3rem;
-  color:#00ab79;
+  color:#00b157;
 }
 
 h2 {
@@ -74,7 +74,7 @@ h2 {
   font-weight: bold;
   font-size:2rem;
   line-height:2.3rem;
-  color:#00ab79
+  color:#00b157
 }
 
 img, picture, video, canvas, svg {
@@ -99,7 +99,7 @@ input[type="email"] {
   width:100%;
   height:3rem;
   border:none;
-  border-bottom:1px solid #7b7b7b;
+  border-bottom:1px solid #333;
   margin-bottom:0.5rem;
   padding:0.3rem 1rem 0.3rem 1rem;
   line-height:2rem;
@@ -160,8 +160,8 @@ button {
 }
 
 [class$="green"] {
-  background-color: #00ab79;
-  border:0.1rem solid #00ab79;
+  background-color: #00b157;
+  border:0.1rem solid #00b157;
   color: #fff;
 }
 
@@ -173,8 +173,8 @@ button {
 
 [class$="white_br_green"] {
   background-color: #fff;
-  border:0.1px solid #00ab79;
-  color: #00ab79;
+  border:0.1px solid #00b157;
+  color: #00b157;
 }
 
 .mt1 {margin-top:1rem;}
