--- a/src/assets/css/join.css
+++ b/src/assets/css/join.css
@@ -140,15 +140,17 @@
 .join_wrap .select_ruffy .ruffys .speech-bubble-wrapper {
   position: absolute;
   width: 100%;
-  margin-top: -9rem;
+  margin-top: -14rem;
 }
 
 /* 말풍선 */
 .join_wrap .select_ruffy .ruffys .speech-bubble {
   width: 100%;
   min-height:15rem;
+  font-size:1rem;
+  line-height:1.5rem;
   background: #fff;
-  padding: 1.5rem 1.8rem;
+  padding: 2rem;
   border-radius: 1rem;
   box-shadow: 0 0.2rem 0.5rem rgba(0, 0, 0, 0.25);
 }
