--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -40,7 +40,7 @@ html, body {
 
 .no-touch {
   width: 100vw;     
-  height: 100vh;   
+  height: calc(var(--vh, 1vh) * 100);
   position: fixed; 
   top: 0;
   left: 0;
