--- a/src/assets/css/join.css
+++ b/src/assets/css/join.css
@@ -150,18 +150,67 @@
   font-size:1rem;
   line-height:1.5rem;
   background: #fff;
-  padding: 2rem;
+  padding: 2.5rem 1.5rem 2rem 1.5rem;
   border-radius: 1rem;
   box-shadow: 0 0.2rem 0.5rem rgba(0, 0, 0, 0.25);
 }
 
+.join_wrap .select_ruffy .ruffys .speech-bubble [class^='r_detail'] {
+  display: flex;
+  align-items: flex-start;
+  gap: 1rem; 
+  font-size:0.9rem;
+  line-height:1.3rem;
+  text-align:left;
+}
+
+.join_wrap .select_ruffy .ruffys .speech-bubble [class^='r_detail'] p {
+  width:5rem;
+  text-align:center;
+  margin: 0;
+  flex-shrink: 0;
+  font-weight: bold;
+  font-size:1.3rem;
+  line-height:1.5rem;
+  font-family: 'Paperlogy-8ExtraBold';
+}
+
+.join_wrap .select_ruffy .ruffys .speech-bubble [class^='r_detail'] span {
+  display: flex;
+  flex-direction: column;
+}
+
+.join_wrap .select_ruffy .ruffys .speech-bubble [class^='r_detail'] span:first-child {
+  width:4rem;
+  height:4rem;
+  margin:0 auto;
+  font-size:0;
+  margin-bottom:0.5rem;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: contain;
+}
+
+.join_wrap .select_ruffy .ruffys .speech-bubble .r_detail01 span:first-child {
+  background-image: url('/src/assets/images/hey_ruffy_temp01_b.png');
+}
+.join_wrap .select_ruffy .ruffys .speech-bubble .r_detail02 span:first-child {
+  background-image: url('/src/assets/images/hey_ruffy_temp02_b.png');
+}
+.join_wrap .select_ruffy .ruffys .speech-bubble .r_detail03 span:first-child {
+  background-image: url('/src/assets/images/hey_ruffy_temp03_b.png');
+}
+.join_wrap .select_ruffy .ruffys .speech-bubble .r_detail04 span:first-child {
+  background-image: url('/src/assets/images/hey_ruffy_temp04_b.png');
+}
+
 .join_wrap .select_ruffy .ruffys .tail {
+  width: 0;
+  height: 0;
   position: absolute;
   bottom: -1rem; 
   left: 50%;
   transform: translateX(-50%);
-  width: 0;
-  height: 0;
   z-index: 1;
 }
 
@@ -208,14 +257,14 @@
 }
 
 .join_wrap .select_ruffy .speech-bubble .close-btn {
+  width: 1rem;
+  height: 1rem;
   position: absolute;
-  top: 1rem;
-  right: 1rem;
+  top: 0.8rem;
+  right: 0.8rem;
   background: none;
   border: none;
   padding: 0;
-  width: 1.4rem;
-  height: 1.4rem;
   cursor: pointer;
 }
 
