--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -4,7 +4,7 @@
   font-weight: 400;
   font-style: normal;
 }
-
+/**/
 @font-face {
   font-family: 'Paperlogy-8ExtraBold';
   src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/2408-3@1.0/Paperlogy-8ExtraBold.woff2') format('woff2');
