--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -115,13 +115,14 @@ input[type="email"] {
   width:100%;
   height:3rem;
   border:none;
-  border-bottom:1px solid #666;
+  border-bottom:1px solid #eee;
   margin-bottom:0.5rem;
   padding:0.3rem 1rem 0.3rem 1rem;
   line-height:2rem;
   font-size:1.16rem;
   text-align:center;
   border-radius: 0;
+  background-color: transparent;
 }
 
 input::placeholder {
@@ -129,8 +130,6 @@ input::placeholder {
 }
 
 input:-webkit-autofill {
-  box-shadow: 0 0 0 1000px #fff inset !important;
-  -webkit-box-shadow: 0 0 0 1000px #fff inset !important;
   -webkit-text-fill-color: #000 !important;
   transition: background-color 9999s ease-out 0s; /* 잔재 배경 색상 제거용 */
 }
@@ -175,19 +174,19 @@ button {
   text-decoration:none;
 }
 
-[class$="green"] {
+[class$="blue"] {
   background-color: #0994ff;
   border:0.1rem solid #0994ff;
   color: #fff;
 }
 
-[class$="blue"] {
+[class$="bgw_blue"] {
   background-color: #5c92ff;
   border:0.1rem solid #5c92ff;
   color: #fff;
 }
 
-[class$="white_br_green"] {
+[class$="white_br_blue"] {
   background-color: #fff;
   border:0.1px solid #0994ff;
   color: #0994ff;
