--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -284,17 +284,19 @@ button {
 
 /* 라디오 박스 */
 .custom-radio-group {
-  width:100%;
   display: flex;
-  flex-direction: row;
+  justify-content: space-between;
   gap: 1rem;
+  margin-top: 1rem;
+  flex-wrap: wrap; 
 }
 
-.custom-radio-group .custom-radio {
-  width:23%;
+.custom-radio-group .custom-radio { 
   display: flex;
   align-items: center;
-  gap: 0.6rem;
+  gap: 0.4rem;
+  cursor: pointer;
+  flex-shrink: 0;
 }
 
 .custom-radio {
