--- a/src/assets/css/color.css
+++ b/src/assets/css/color.css
@@ -47,8 +47,16 @@ body.bw .select_ruffy .ruffys a.on span.name,
 body h1, 
 body.blue h1,
 body h2, 
-body.blue h2 {
+body.blue h2,
+body a, 
+body.blue a {
   color:#0994ff;
+}
+
+
+body .uline, 
+body.blue .uline {
+    border-bottom:1px solid #0994ff
 }
 
 body [class$="basic"],
@@ -70,6 +78,7 @@ body.blue .custom-radio input[type="radio"]:checked + .circle::after {
   background-color:#0994ff;
 }
 
+
 body .checkbox-label input:checked + .checkmark::after,
 body.blue .checkbox-label input:checked + .checkmark::after {
   width: 0.6rem;
@@ -83,15 +92,32 @@ body.blue .checkbox-label input:checked + .checkmark::after {
   transform: rotate(45deg);
 }
 
+body .form_box_g.limit p button.b_basic.on,
+body.blue .form_box_g.limit p button.b_basic.on {
+    background-color:#0994ff;
+    color:#fff;
+    border:1px solid #0994ff;
+}
+
 body .light,
-body.blue .light {
+body.blue .light,
+body .inline-wheel-item.selected,
+body.blue .inline-wheel-item.selected,
+body .monthly-grid span.m_s_btn.selected,
+body.blue .monthly-grid span.m_s_btn.selected {
   background-color:#ddf2ff;
+  border:none;
 }
 
 /* skin color red*/
 body.red h1,
-body.red h2 {
+body.red h2,
+body.red a {
   color:#ff5450;
+}
+
+body.red .uline {
+    border-bottom:1px solid #ff5450
 }
 
 body.red [class$="basic"]  {
@@ -122,14 +148,27 @@ body.red .checkbox-label input:checked + .checkmark::after {
   transform: rotate(45deg);
 }
 
-body.red .light {
+body.red .form_box_g.limit p button.b_basic.on  {
+    background-color:#ff4160;
+    color:#fff;
+    border:1px solid #ff4160;
+}
+
+body.red .light,
+body.red .inline-wheel-item.selected,
+body.red .monthly-grid span.m_s_btn.selected  {
   background-color:#ffeef4;
 }
 
 /* skin color green*/
 body.green h1,
-body.green h2 {
+body.green h2,
+body.green a {
   color:#00ac6d;
+}
+
+body.green .uline {
+    border-bottom:1px solid #00ac6d
 }
 
 body.green [class$="basic"]  {
@@ -160,16 +199,28 @@ body.green .checkbox-label input:checked + .checkmark::after {
   transform: rotate(45deg);
 }
 
-body.green .light {
+body.green .form_box_g.limit p button.b_basic.on  {
+    background-color:#00ac6d;
+    color:#fff;
+    border:1px solid #00ac6d;
+}
+
+body.green .light,
+body.green .inline-wheel-item.selected,
+body.green .monthly-grid span.m_s_btn.selected {
   background-color:#d5f3ee;
 }
 
 /* skin color bw*/
 body.bw h1,
-body.bw h2  {
+body.bw h2,
+body.bw a  {
   color:#333;
 }
 
+body.bw .uline {
+    border-bottom:1px solid #333
+}
 
 body.bw [class$="basic"]  {
   background-color: #333;
@@ -200,8 +251,15 @@ body.bw .checkbox-label input:checked + .checkmark::after {
   transform: rotate(45deg);
 }
 
+body.bw .form_box_g.limit p button.b_basic.on  {
+    background-color:#ccc;
+    color:#fff;
+    border:1px solid #ccc;
+}
 
-body.bw .light {
+body.bw .light,
+body.bw .inline-wheel-item.selected,
+body.bw .monthly-grid span.m_s_btn.selected  {
   background-color:#f5f5f5;
 }
 
