--- a/src/assets/css/popup.css
+++ b/src/assets/css/popup.css
@@ -61,8 +61,7 @@
 	left:0;
 	z-index:888;
 	color:#333;
-	font-family: Pretendard-Regular;
-	font-weight:700;
+	font-family: Freesentation-9Black;
 }
 
 .popup_wrap h2 p {
