--- a/src/assets/css/popup.css
+++ b/src/assets/css/popup.css
@@ -104,7 +104,7 @@
 	border-radius: 0;
 	border-bottom-right-radius: 0.7rem;
 	border-bottom-left-radius: 0.7rem;
-	border:1px solid #eee;
+	border:1px solid #ddd;
 	border-top:none;
 	padding:1rem 1rem 0 1rem;
 	font-size:1rem;
