--- a/src/assets/css/popup.css
+++ b/src/assets/css/popup.css
@@ -37,7 +37,7 @@
 	position:fixed;
 	top:0;
 	left:0;
-	padding:7rem 1rem 3rem 1rem;
+	padding:7rem 1.5rem 3rem 1.5rem;
 	overflow-y:auto;
 	z-index:888;
 }
@@ -48,13 +48,13 @@
 	background-color:#fff;
 	border-radius:1rem;
 	padding:2rem;
-	border:0.1rem solid #f5f5f5;
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);;
 }
 
 .popup_wrap h2 {
 	width:100%;
-	font-size:1.4rem;
-	line-height:1.6rem;
+	font-size:1.5rem;
+	line-height:1.7rem;
 	padding-top:2rem;
 	position:fixed;
 	top:0;
@@ -62,12 +62,12 @@
 	z-index:888;
 	color:#333;
 	font-family: Pretendard-Regular;
-  font-weight:800
+  font-weight:900
 }
 
 .popup_wrap h2 p {
-	font-size:0.9rem;
-	line-height:1.2rem;
+	font-size:1rem;
+	line-height:1.3rem;
 	color:#666;
 	font-weight:300;
 	margin-top:0.5rem;
