--- a/src/assets/css/popup.css
+++ b/src/assets/css/popup.css
@@ -61,8 +61,8 @@
 	left:0;
 	z-index:888;
 	color:#333;
-	font-family: Fresentation;
-  font-weight:900
+	font-family: Freesentation-7Black;
+  font-weight:700
 }
 
 .popup_wrap h2 p {
