--- a/src/assets/css/popup.css
+++ b/src/assets/css/popup.css
@@ -178,10 +178,21 @@
 .inline-wheel-list {
   height: 100%;
   overflow-y: scroll;
+  scroll-snap-type: y mandatory;
   -webkit-overflow-scrolling: touch;
+  scrollbar-width: none;  
+  -ms-overflow-style: none; 
+}
+
+.inline-wheel-list::-webkit-scrollbar {
+  display: none;  
 }
 
 .inline-wheel-item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  scroll-snap-align: center;
 	line-height:2.5rem;
   text-align: center;
 	border-bottom:1px solid #f5f5f5;
@@ -223,6 +234,7 @@
 
 .highlight-overlay {
   position: absolute;
+  top: 50%;
   left: 0;
   right: 0;
   pointer-events: none;
