--- a/src/assets/css/popup.css
+++ b/src/assets/css/popup.css
@@ -193,7 +193,7 @@
   align-items: center;
   justify-content: center;
   scroll-snap-align: center;
-	line-height:2.5rem;
+	height:2.5rem;
   text-align: center;
 	border-bottom:1px solid #f5f5f5;
   transition: background-color 0.2s;
@@ -233,6 +233,7 @@
 }
 
 .highlight-overlay {
+  height:2.5rem;
   position: absolute;
   top: 50%;
   left: 0;
