--- a/src/assets/css/popup.css
+++ b/src/assets/css/popup.css
@@ -200,12 +200,10 @@
   justify-content: center;
   scroll-snap-align: center;
   font-size: 1.1rem;
-  color: #999;
 }
 
 .inline-wheel-item.selected {
   font-weight: bold;
-  color: #000;
 }
 
 .highlight-overlay {
@@ -216,9 +214,7 @@
   transform: translateY(-50%);
   left: 0;
   right: 0;
-  border-top: 1px solid #ddd;
-  border-bottom: 1px solid #ddd;
-  background: rgba(255, 255, 255, 0.4);
+  border-radius:1rem;
   z-index: 1;
 }
 
@@ -237,7 +233,6 @@
 #v_detail02_block .check_btn button {
   width: 22%;
   border-radius: 1rem;
-  border: 1px solid #ddd;
   justify-content: center;
   align-items: center;
   display: flex;
