--- a/src/assets/css/popup.css
+++ b/src/assets/css/popup.css
@@ -55,8 +55,10 @@
 	width:100%;
 	font-size:1.6rem;
 	line-height:1.8rem;
-	padding-top:2.2rem;
+	padding:2.2rem 0 2.2rem 0;
 	position:fixed;
+  border-bottom-right-radius: 1.5rem;
+	border-bottom-left-radius: 1.5rem;
 	top:0;
 	left:0;
 	z-index:888;
