--- a/src/assets/css/popup.css
+++ b/src/assets/css/popup.css
@@ -43,7 +43,7 @@
 }
 
 .popup_wrap .popup_inner {
-	margin-top:3rem;
+	margin-top:4.2rem;
 	margin-bottom:4rem;
 	background-color:#fff;
 	border-radius:1.5rem;
@@ -80,7 +80,7 @@
 
 .popup_wrap .popup_btm {
 	width:100%;
-	padding:1rem;
+	padding:2rem;
 	position:fixed;
 	bottom:0;
 	left:0;
@@ -88,8 +88,8 @@
 }
 
 .popup_wrap .popup_btm button {
-  font-size:1.8rem;
-  line-height:3rem
+  font-size:1.4rem;
+  height:2rem
 }
 
 .form_box_g {
