--- a/src/assets/css/popup.css
+++ b/src/assets/css/popup.css
@@ -88,8 +88,9 @@
 }
 
 .popup_wrap .popup_btm button {
-  font-size:1.4rem;
-  height:2rem
+  font-size:1.6rem;
+  line-height:4rem;
+  letter-spacing:-0.01rem;
 }
 
 .form_box_g {
