--- a/src/assets/css/popup.css
+++ b/src/assets/css/popup.css
@@ -46,16 +46,19 @@
 	margin-top:4.2rem;
 	margin-bottom:4rem;
 	background-color:#fff;
-	border-radius:1.5rem;
+	border-bottom-left-radius:1.5rem;
+	border-bottom-right-radius:1.5rem;
 	padding:2rem;
-	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);;
+	/*box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);;*/
 }
 
 .popup_wrap h2 {
 	width:100%;
 	font-size:1.6rem;
 	line-height:1.8rem;
-	padding:2.2rem 0 2.2rem 0;
+	height:8rem;
+  background-color:red;
+  padding:2.2rem 0 2.2rem 0;
 	position:fixed;
 	top:0;
 	left:0;
@@ -88,8 +91,8 @@
 }
 
 .popup_wrap .popup_btm button {
-  font-size:1.6rem;
-  line-height:4rem;
+  font-size:1.5rem;
+  line-height:3.5rem;
   letter-spacing:-0.01rem;
 }
 
